## Sonar fix: Refactor the code so this stream pipeline is used